[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.poetry]
name = "managed-services-integration-tests"
version = "1.0"
description = "managed-services-integration-tests"
authors = ["managed-services-integration-tests"]
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = "^3.9"
pytest-progress = "==1.2.5"                       # https://github.com/ssrikanta/pytest-progress
openshift-python-wrapper = "*"
docker = "^7.0.0"
colorlog = "^6.7.0"
openshift-cluster-management-python-wrapper = "*"
openshift-python-wrapper-data-collector = "*"
pytest = "^7.4.0"
pytest-testconfig = "^0.2.0"
hvac = "^2.0.0"
pytz = "^2023.3"
pip = "^23.1.2"
pyyaml = "^6.0"
pytest-dependency = "^0.6.0"
pytest-order = "^1.1.0"
shortuuid = "^1.0.11"
redhat-qe-cloud-tools = "*"
boto3 = "^1.28.1"
rosa-python-client = "*"
python-simple-logger = "*"
packaging = "^23.1"
pyaml-env = "^1.2.1"
openshift-cli-installer = "*"
openshift-python-utilities = "*"
timeout-sampler = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
